# bnb_method

./: .gitignore  CMakeLists.txt  Makefile  README.md  knapsack_solver.c  main.c  scheduling_solver.c  solver.c  solver.h
include/: problem.h  queue.h  solver.h
methods/: CMakeLists.txt  problem.c  problem.h  problem_solution.c
src/: knapsack_solver.c  n_knapsack_solver.c  problem.c  problem_solution.c  queue.c  solver.c
utils/: CMakeLists.txt  stack.c  stack.h
